MB-40076: Cookie must be registered during execution

The cookie must be registered in the cookies array during
command execution to ensure that the shutdown logic keeps
track of all of the reference counters.

Change-Id: I7448a000f38abbca0fe9ee33c076923302e3cb37
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/131150
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Daniel Owen <owend@couchbase.com>