protocol/connection/client_mcbp_commands.cc
@@ -1862,3 +1862,23 @@ BinprotObserveResponse::getResults() {
 
     return ret;
 }
+BinprotEWBCommand::BinprotEWBCommand(EWBEngineMode mode,
+                                     ENGINE_ERROR_CODE err_code,
+                                     uint32_t value,
+                                     const std::string& key)
+    : BinprotGenericCommand(cb::mcbp::ClientOpcode::EwouldblockCtl, key),
+      mode(mode),
+      err_code(err_code),
+      value(value) {
+}
+
+void BinprotEWBCommand::encode(std::vector<uint8_t>& buf) const {
+    cb::mcbp::request::EWB_Payload extras;
+    extras.setMode(uint32_t(mode));
+    extras.setValue(uint32_t(value));
+    extras.setInjectError(uint32_t(err_code));
+    writeHeader(buf, 0, sizeof(extras));
+    auto extraBuf = extras.getBuffer();
+    buf.insert(buf.end(), extraBuf.begin(), extraBuf.end());
+    buf.insert(buf.end(), key.begin(), key.end());
+}
